--- a/src/weatherChart/weatherChart.module.css
+++ b/src/weatherChart/weatherChart.module.css
@@ -16,6 +16,7 @@
     position: absolute;
     left: 2%;
  filter: drop-shadow(8px 8px 16px rgba(0, 0, 0, 0.5)); 
+ cursor: pointer;
 }
 
 .DataLayoutRight{
